--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "pronist/eclair",
     "description": "Eclair is a Simple PHP micro framework",
     "version": "0.0.1",
+    "license": "MIT",
     "scripts":{
         "lint": "phpcs --standard=PSR12 -n --extensions=php --ignore=vendor ."
     },
